--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">header link three</a>
     </nav>
     <div class="hero-section">
-        <div>
+        <div class="hero-section-text">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign up</button>
@@ -26,23 +26,23 @@
         <img src="/images/heroimage.jpg" alt="Image of a person holding a book over their face, Photo by Anete Lusina">            
     </div>
     <div class="cards-section">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div>
             <div class="card">
                 <img src="/images/book.jpg" alt="Image of a book">
-                <p>this is some subtext under an image</p>
+                <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
             <div class="card">
                 <img src="/images/book.jpg" alt="Image of a book">
-                <p>this is some subtext under an image</p>
+                <p>this is some subtext under an image. We're writing more here to see what it does.</p>
             </div>
             <div class="card">
                 <img src="/images/book.jpg" alt="Image of a book">
-                <p>this is some subtext under an image</p>
+                <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
             <div class="card">
                 <img src="/images/book.jpg" alt="Image of a book">
-                <p>this is some subtext under an image</p>
+                <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
         </div>
     </div>
