Add final styles index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="index.css">
     <title>Foundations</title>
 </head>
 <body>
@@ -47,12 +46,12 @@
         </div>
     </div>
     <div class="quotes-section">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows?</p>
-        <p>-Thor, God of Thunder</p>
+        <p><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></p>
+        <p style="text-align: end; font-weight: bold; padding-right: 4em; font-size:18px;">-Thor, God of Thunder</p>
     </div>
     <div class="CTA-section">
         <div class="CTA">
-            <p><span style="font-weight: bold;">Call to action! It's time!</span></br>Sign up for our product by clicking that button right over there!</p>
+            <p><span style="font-size:22px; font-weight: bold;">Call to action! It's time!</span></br>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
         </div>
     </div>
