Fix problem with image loading

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <p>this is some subtext under an image. We're writing more here to see what it does.</p>
             </div>
             <div class="card">
-                <img src="/images/book.jpg" alt="Image of a book">
+                <img src="./images/book.jpg" alt="Image of a book">
                 <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
             <div class="card">
-                <img src="/images/book.jpg" alt="Image of a book">
+                <img src="./images/book.jpg" alt="Image of a book">
                 <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
         </div>
