Fix problem with image loading but for real this time

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign up</button>
         </div>
-        <img src="/images/heroimage.jpg" alt="Image of a person holding a book over their face, Photo by Anete Lusina">            
+        <img src="./images/heroimage.jpg" alt="Image of a person holding a book over their face, Photo by Anete Lusina">            
     </div>
     <div class="cards-section">
         <h2>Some random information.</h2>
         <div>
             <div class="card">
-                <img src="/images/book.jpg" alt="Image of a book">
+                <img src="./images/book.jpg" alt="Image of a book">
                 <p>this is some subtext under an image We're writing more here to see what it does.</p>
             </div>
             <div class="card">
-                <img src="/images/book.jpg" alt="Image of a book">
+                <img src="./images/book.jpg" alt="Image of a book">
                 <p>this is some subtext under an image. We're writing more here to see what it does.</p>
             </div>
             <div class="card">
